hphp/test/zend/good/zend/objects_011.php
<?php

class test {
	function __construct() {
	}
	function test() {
	}
}

echo "Done\n";
?>